samples/eventchain/invalid/accounttask-invalid.verified
1|WorkItemStartedForAccount|accountId=account-99|taskId=work-99
